code wrote in main tag

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <main>
     <div class="main-container">
         <div class="boxpage">
             <div class="image">
@@ -49,6 +50,7 @@
         </div>
 
     </div>
+    </main>
 </body>
 
 </html>
